# SmartWatchForChildSafety-Capstone-Project

./: Age Recognition SVM.ipynb  Emotion Recognition DTC.ipynb  Emotion Recognition RFC.ipynb  Emotion Recognition SVM.ipynb  Emotion SVM Trained Model Usage  README.md  SVM feature Extraction Original .ipynb  age_model.joblib  gender_model.joblib  main.py  mozilla dataset usage.ipynb  requirements.txt  result.txt  server.py  settings.txt  test.py
DashboardApplication/: sdkconfig  sdkconfig.old
DashboardApplication/main/: CMakeLists.txt  idf_component.yml  main.c
DashboardApplication/main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
DashboardApplication/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c
DashboardApplication/main/ui/components/: ui_comp_hook.c
DashboardApplication/main/ui/images/: ui_img_analytics_png.c  ui_img_filter_png.c  ui_img_padlock_png.c
DashboardApplication/main/ui/screens/: ui_FilteringOptionsPage.c  ui_FilteringOptionsPage2.c  ui_LockPage.c  ui_LoginScreen.c  ui_ProfilePage.c  ui_SaveSamplingRateNotification.c  ui_SaveScreen.c
LVGL_Arduino/: CMakeLists.txt  LVGL_Arduino.ino  LVGL_Driver.cpp  LVGL_Driver.h  MIC_MSM.cpp  MIC_MSM.h  Record_Audio.c  SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py  Wireless.cpp  Wireless.h  ui.c  ui.h  ui_FilteringOptionsPage.c  ui_FilteringOptionsPage2.c  ui_LockPage.c  ui_LoginScreen.c  ui_PredictionsPage.c  ui_ProfilePage.c  ui_SaveSamplingRateNotification.c  ui_events.cpp  ui_events.h  ui_img_checked_png.c  ui_img_filter_png.c  ui_img_plus_png.c
ML_Models/: Age Recognition DTC.ipynb  Age Recognition RFC.ipynb  Gender, Age and Emotion Detection from Voice
SquareLine/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
SquareLine_Project/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.c
SquareLine_Project/ui/: CMakeLists.txt  filelist.txt  ui.c  ui_events.c  ui_events.h
SquareLine_Project/ui/images/: ui_img_checked_png.c  ui_img_plus_png.c  ui_img_user_png.c
SquareLine_Project/ui/screens/: ui_CurrentSamplingRateSelections.c  ui_FilteringOptionsPage.c  ui_LoginScreen.c  ui_MainPage.c  ui_PredictionsPage.c  ui_SaveSamplingRateNotification.c  ui_SaveScreen.c
SquarelineOutput/: SquareLine_Project.sll  SquareLine_Project.spj  filelist.txt  ui_CurrentSamplingRateSelections.c  ui_MainPage.c  ui_SaveScreen.c  ui_img_analytics_png.c  ui_img_padlock_png.c  ui_img_user_png.c
esp32/: ui.h  ui_helpers.h
esp32/screens/: ui_DashboardScreen.c  ui_Notification.c  ui_SettingsScreen.c
tests/: __init__.py  test_server.py
ui/: APP.py  APP.ui
(+1 files in other folders)
