idf_component_register(
                         SRCS 
                              "./main.c" 
                              "./EXIO/TCA9554PWR.c"
                              "./Audio_Driver/PCM5101.c" 
                              "./LCD_Driver/esp_lcd_spd2010/esp_lcd_spd2010.c" 
                              "./LCD_Driver/Display_SPD2010.c"     
                              "./Touch_Driver/Touch_SPD2010.c"
                              "./SD_Card/SD_MMC.c" 
                              "./I2C_Driver/I2C_Driver.c"
                              "./PCF85063/PCF85063.c"
                              "./QMI8658/QMI8658.c"
                              "./BAT_Driver/BAT_Driver.c"
                              "./PWR_Key/PWR_Key.c"
                              "./Wireless/Wireless.c"
                              "./ui/ui.c"
                              "./ui/ui_helpers.c"
                              "./ui/screens/ui_DashboardScreen.c"
                              "./ui/screens/ui_Notification.c"
                              "./ui/screens/ui_SettingsScreen.c"
                              "./LVGL_Driver/LVGL_Driver.c"

                         INCLUDE_DIRS 
                              "./Audio_Driver" 
                              "./LCD_Driver/esp_lcd_spd2010" 
                              "./LCD_Driver"    
                              "./Touch_Driver"
                              "./EXIO"
                              "./SD_Card" 
                              "./I2C_Driver"
                              "./PCF85063"
                              "./QMI8658"
                              "./BAT_Driver"
                              "./PWR_Key"
                              "./Wireless"
                              "."
                              "./ui"
                              "./LVGL_Driver"
                       )
